remove accidental characters

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <td>The COMBAT-TB Project: Accessible tools for data intensive M. tuberculosis research<br/>
                     Peter van Heusden (SANBI)</td>
                 <td>Using Galaxy for M. tuberculosis variant calling<br/>
-                    Ziphozakhe Mashologu (SANBI)st</td>
+                    Ziphozakhe Mashologu (SANBI)</td>
                 <td>Moving code to data using workflow standards and containers<br/>
                     Eugene de Beste (SANBI)</td>
             </tr>
