Updated site and cleaned repo.

--- a/index.html
+++ b/index.html
@@ -89,8 +89,17 @@
           <div class="row">
             <div class="col-lg-6">
               <h2>About Galaxy Africa</h2>
-              <p>An opportunity to learn from leading bioinformaticists, systems administrators and engineers about
-                Galaxy and accessible, reproducible analysis of biological data.</p>
+              <p>
+                After a successful Galaxy Africa 2018 in South Africa, we are pleased to announce Galaxy Africa 2019
+                workshop in collaboration with the
+                <a href="https://www.iscb.org/iscbafrica2019" target="_blank" rel="noopener noreferrer">ASBCB/ISCB
+                  Africa</a> conference in Kumasi, Ghana.
+              </p>
+              <p>
+                Building on the previous event, we will offer <a href="https://galaxyproject.org/" target="_blank"
+                  rel="noopener noreferrer">Galaxy</a> training for researchers, and training for
+                systems administrators who need to maintain a local installation.
+              </p>
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
@@ -364,8 +373,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-          <i class="fa fa-heart"></i>
+          <i class="fa fa-gear"></i> <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
     </footer><!-- #footer -->
@@ -382,9 +390,6 @@
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/venobox/venobox.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
