--- a/index.html
+++ b/index.html
@@ -148,35 +148,49 @@
                 </div>
               </div>
               <div class="row schedule-item">
-                <div class="col-md-2"><time>10:30 AM</time></div>
+                <div class="col-md-2"><time>10:00 AM</time></div>
                 <div class="col-md-10">
-                  <h4>TEA</h4>
+                  <h4>Galaxy Australia <span>- Simon Gladman</span></h4>
                 </div>
               </div>
 
               <div class="row schedule-item">
                 <div class="col-md-2"><time>11:00 AM</time></div>
                 <div class="col-md-10">
-                  <h4> Galaxy Australia <span>- Simon Gladman</span></h4>
+                  <h4>BREAK</h4>
                 </div>
               </div>
 
               <div class="row schedule-item">
-                <div class="col-md-2"><time>12:00 PM</time></div>
+                <div class="col-md-2"><time>11:30 PM</time></div>
                 <div class="col-md-10">
                   <h4>Galaxy 101</h4>
                 </div>
               </div>
 
               <div class="row schedule-item">
-                <div class="col-md-2"><time>12:30 PM</time></div>
+                <div class="col-md-2"><time>01:00 PM</time></div>
                 <div class="col-md-10">
                   <h4>LUNCH</h4>
                 </div>
               </div>
 
               <div class="row schedule-item">
-                <div class="col-md-2"><time>13:30 PM</time></div>
+                <div class="col-md-2"><time>02:15 PM</time></div>
+                <div class="col-md-10">
+                  <h4> TB Variant Calling & Phylogeny</h4>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>03:15 PM</time></div>
+                <div class="col-md-10">
+                  <h4>BREAK</h4>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>3:45 PM</time></div>
                 <div class="col-md-10">
                   <h4> TB Variant Calling & Phylogeny</h4>
                 </div>
@@ -200,15 +214,58 @@
                 <div class="col-md-10">
                   <h4>Intro to Galaxy for Admins</h4>
                   <p>Containers: easing the burden of Galaxy and tool deployment</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>11:00 AM</time></div>
+                <div class="col-md-10">
+                  <h4>BREAK</h4>
+                </div>
+              </div>
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>11:30 AM</time></div>
+                <div class="col-md-10">
+                  <h4>Intro to Galaxy for Admins</h4>
                   <p>Packaging software with <code>conda</code></p>
                 </div>
               </div>
 
 
               <div class="row schedule-item">
-                <div class="col-md-2"><time>12:30 PM</time></div>
+                <div class="col-md-2"><time>01:00 PM</time></div>
                 <div class="col-md-10">
                   <h4>LUNCH</h4>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>2:15 PM</time></div>
+                <div class="col-md-10">
+                  <h4>Intro to Galaxy for Admins</h4>
+                  <p>Galaxy Tool Shed</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>03:15 PM</time></div>
+                <div class="col-md-10">
+                  <h4>BREAK</h4>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>3:45 PM</time></div>
+                <div class="col-md-10">
+                  <h4>Intro to Galaxy for Admins</h4>
+                  <p>Deployment and platform options</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>17:00 PM</time></div>
+                <div class="col-md-10">
+                  <h4>END</h4>
                 </div>
               </div>
             </div>
