--- a/index.html
+++ b/index.html
@@ -155,6 +155,13 @@
               </div>
 
               <div class="row schedule-item">
+                <div class="col-md-2"><time>10:30 AM</time></div>
+                <div class="col-md-10">
+                  <h4>A Short Introduction to Galaxy</h4>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
                 <div class="col-md-2"><time>11:00 AM</time></div>
                 <div class="col-md-10">
                   <h4>BREAK</h4>
