--- a/index.html
+++ b/index.html
@@ -215,12 +215,27 @@
             <!-- End Schdule Day 1 -->
             <!-- Schdule Day 2 -->
             <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
-
               <div class="row schedule-item">
                 <div class="col-md-2"><time>09:00 AM</time></div>
                 <div class="col-md-10">
-                  <h4>Intro to Galaxy for Admins</h4>
-                  <p>Containers: easing the burden of Galaxy and tool deployment</p>
+                  <h4>Welcome and Introduction</h4>
+                  <p>@galaxyproject</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>09:20 AM</time></div>
+                <div class="col-md-10">
+                  <h4>Intro to Ansible</h4>
+                  <p>Configuration Management</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>10:00 AM</time></div>
+                <div class="col-md-10">
+                  <h4>Galaxy Server Part 1</h4>
+                  <p>Basic Install</p>
                 </div>
               </div>
 
@@ -230,14 +245,14 @@
                   <h4>BREAK</h4>
                 </div>
               </div>
+
               <div class="row schedule-item">
                 <div class="col-md-2"><time>11:30 AM</time></div>
                 <div class="col-md-10">
-                  <h4>Intro to Galaxy for Admins</h4>
-                  <p>Packaging software with <code>conda</code></p>
+                  <h4>Galaxy Server Part 2</h4>
+                  <p>Towards Production</p>
                 </div>
               </div>
-
 
               <div class="row schedule-item">
                 <div class="col-md-2"><time>01:00 PM</time></div>
@@ -249,8 +264,8 @@
               <div class="row schedule-item">
                 <div class="col-md-2"><time>2:15 PM</time></div>
                 <div class="col-md-10">
-                  <h4>Intro to Galaxy for Admins</h4>
-                  <p>Galaxy Tool Shed</p>
+                  <h4>Galaxy Server Part 3</h4>
+                  <p>Advanced Install</p>
                 </div>
               </div>
 
@@ -264,8 +279,16 @@
               <div class="row schedule-item">
                 <div class="col-md-2"><time>3:45 PM</time></div>
                 <div class="col-md-10">
-                  <h4>Intro to Galaxy for Admins</h4>
-                  <p>Deployment and platform options</p>
+                  <h4>Connecting Galaxy to a Compute Cluster</h4>
+                  <p>Job Resources</p>
+                </div>
+              </div>
+
+              <div class="row schedule-item">
+                <div class="col-md-2"><time>4:15 PM</time></div>
+                <div class="col-md-10">
+                  <h4>Flexible Topics</h4>
+                  <p>Tools, Data, Networking, other</p>
                 </div>
               </div>
 
