--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
-              <p>Telepresence Room, KNUST<br>Kumasi, Ghana</p>
+              <p>Library ICT Computer Lab, KNUST<br>Kumasi, Ghana</p>
             </div>
             <div class="col-lg-3">
               <h3>When</h3>
@@ -119,7 +119,7 @@
         <div class="container wow fadeInUp">
           <div class="section-header">
             <h2>Schedule</h2>
-            <p>Telepresence Room</p>
+            <p>Library ICT Computer Lab</p>
           </div>
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
