--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="row schedule-item">
                 <div class="col-md-2"><time>11:30 PM</time></div>
                 <div class="col-md-10">
-                  <h4>Galaxy 101</h4>
+                  <h4>Variant Calling</h4>
                 </div>
               </div>
 
@@ -185,7 +185,7 @@
               <div class="row schedule-item">
                 <div class="col-md-2"><time>02:15 PM</time></div>
                 <div class="col-md-10">
-                  <h4> TB Variant Calling & Phylogeny</h4>
+                  <h4>TB Variant Calling & Phylogeny</h4>
                 </div>
               </div>
 
@@ -199,7 +199,7 @@
               <div class="row schedule-item">
                 <div class="col-md-2"><time>3:45 PM</time></div>
                 <div class="col-md-10">
-                  <h4> TB Variant Calling & Phylogeny</h4>
+                  <h4>TB Variant Calling & Phylogeny</h4>
                 </div>
               </div>
 
