Add link to Galaxy Africa 2018 website

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="col-lg-6">
               <h2>About Galaxy Africa</h2>
               <p>
-                After a successful Galaxy Africa 2018 in South Africa, we are pleased to announce Galaxy Africa 2019
+                After a successful <a href="https://sanbi-sa.github.io/galaxy-africa-2018-website/">Galaxy Africa 2018</a> in South Africa, we are pleased to announce Galaxy Africa 2019
                 workshop in collaboration with the
                 <a href="https://www.iscb.org/iscbafrica2019" target="_blank" rel="noopener noreferrer">ASBCB/ISCB
                   Africa</a> conference in Kumasi, Ghana.
